# 设置输出库文件的名称前缀和后缀
set( CMAKE_DEBUG_POSTFIX "_d" )

# 增加子目录
add_subdirectory( ArrayDeque )
add_subdirectory( ArrayList )
add_subdirectory( ArrayQueue )
add_subdirectory( ArrayStack )

# add_subdirectory( AVLTree )
# add_subdirectory( BinaryTree )
# add_subdirectory( BinaryTreeUtils )
# add_subdirectory( BSTree )
add_subdirectory( HashMap )
add_subdirectory( Iterator )
add_subdirectory( LinkedList )
add_subdirectory( Predefined )
add_subdirectory( SortingAlgorithm )
add_subdirectory( Undigraph )
add_subdirectory( UnionFindSet )
